--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,9 @@
 .map {
     width: 900px;
     height: 547px;
+    /* width: 1200px;
+    height: 800px; */
+
     margin : 0;
     float: left;
   }
